--- a/jmtesting/design-canada/information-findability-fr.html
+++ b/jmtesting/design-canada/information-findability-fr.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html class="no-js" lang="en" dir="ltr">
+<html class="no-js" lang="fr" dir="ltr">
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -54,9 +54,9 @@
 	<h2 class="wb-inv">Language selection</h2>
 	<ul class="list-inline mrgn-bttm-0">
 		<li>
-			<a lang="fr" hreflang="fr" href="https://conception.canada.ca">
-				<span class="hidden-xs" translate="no">Français</span>
-				<abbr title="Français" translate="no" class="visible-xs h3 mrgn-tp-sm mrgn-bttm-0 text-uppercase">fr</abbr>
+			<a lang="fr" hreflang="fr" href="information-findability.html">
+				<span class="hidden-xs" translate="no">English</span>
+				<abbr title="English" translate="no" class="visible-xs h3 mrgn-tp-sm mrgn-bttm-0 text-uppercase">en</abbr>
 			</a>
 		</li>
 	</ul>
@@ -65,7 +65,7 @@
 			
 			<div class="brand col-xs-9 col-sm-5 col-md-4" property="publisher" typeof="GovernmentOrganization">
 	<a href="#" property="url">
-		<img src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/sig-blk-en.svg" alt="Government of Canada" property="logo" /><span class="wb-inv"> / <span lang="fr">Gouvernement du Canada</span></span>
+		<img src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/sig-blk-fr.svg" alt="Government of Canada" property="logo" /><span class="wb-inv"> / <span lang="fr">Gouvernement du Canada</span></span>
 	</a>
 	<meta property="name" content="Government of Canada">
 	<meta property="areaServed" typeof="Country" content="Canada" />
@@ -74,18 +74,19 @@
 
 			
 				
+				
 <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4">
-	<h2>Search</h2>
-	<form action="https://canada.ca/en/sr/srb.html" method="get" name="cse-search-box" role="search">
+	<h2>Recherche</h2>
+	<form action="https://canada.ca/fr/sr/srb.html" method="get" name="cse-search-box" role="search">
 		<div class="form-group wb-srch-qry">
-			<label for="wb-srch-q" class="wb-inv">Search Canada.ca</label>
-			<input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="34" maxlength="170" placeholder="Search Canada.ca" />
+			<label for="wb-srch-q" class="wb-inv">Rechercher dans Canada.ca</label>
+			<input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="34" maxlength="170" placeholder="Rechercher dans Canada.ca" />
 			<datalist id="wb-srch-q-ac"></datalist>
 		</div>
 		<div class="form-group submit">
 			<button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small" name="wb-srch-sub">
 				<span class="glyphicon-search glyphicon"></span>
-				<span class="wb-inv">Search</span>
+				<span class="wb-inv">Recherche</span>
 			</button>
 		</div>
 	</form>
@@ -100,22 +101,22 @@
 		<div class="row"><div class="col-md-8">
 					<nav class="gcweb-menu" typeof="SiteNavigationElement">
 	<h2 class="wb-inv">Menu</h2>
-	<button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
-	<ul role="menu" aria-orientation="vertical" data-ajax-replace="https://www.canada.ca/content/dam/canada/sitemenu/sitemenu-v2-en.html"><li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/jobs.html">Jobs and the workplace</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/immigration-citizenship.html">Immigration and citizenship</a></li>
-		<li role="presentation"><a role="menuitem" href="https://travel.gc.ca/">Travel and tourism</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/business.html">Business and industry</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/benefits.html">Benefits</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/health.html">Health</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/environment.html">Environment and natural resources</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/defence.html">National security and defence</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/culture.html">Culture, history and sport</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/policing.html">Policing, justice and emergencies</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/transport.html">Transport and infrastructure</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.international.gc.ca/world-monde/index.aspx?lang=eng">Canada and the world</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/finance.html">Money and finances</a></li>
-		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/en/services/science.html">Science and innovation</a></li></ul>
+	<button type="button" aria-haspopup="true" aria-expanded="false">Menu<span class="wb-inv"> principal</span> <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
+	<ul role="menu" aria-orientation="vertical" data-ajax-replace="https://www.canada.ca/content/dam/canada/sitemenu/sitemenu-v2-fr.html"><li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/emplois.html">Emplois et milieu de travail</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Immigration et citoyenneté</a></li>
+		<li role="presentation"><a role="menuitem" href="https://voyage.gc.ca/">Voyage et tourisme</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/entreprises.html">Entreprises et industrie</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/prestations.html">Prestations</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/sante.html">Santé</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/impots.html">Impôts</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/environnement.html">Environnement et ressources naturelles</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/defense.html">Sécurité nationale et défense</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/culture.html">Culture, histoire et sport</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/police.html">Services de police, justice et urgences</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/transport.html">Transport et infrastructure</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.international.gc.ca/world-monde/index.aspx?lang=fra">Canada et le monde</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/finance.html">Argent et finances</a></li>
+		<li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/science.html">Science et innovation</a></li></ul>
 </nav>
 
 				</div></div>
@@ -155,44 +156,46 @@
 		<main class="container" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
 				<!-- Custom code starts here --><h1 property="name" id="wb-cont" property="name headline" dir="ltr">
 					<span class="stacked">
-						<span>Information architecture and findability</span>: <span></span>
+						<span>Architecture de l’information et trouvabilité 
+						</span>: <span></span>
 					</span>
 				</h1><!-- Custom code ends here -->
-<p>Organize and structure webpages for findability and task success across Canada.ca.</p>
+<p>Organiser et structurer les pages Web pour faciliter la recherche et la réussite des tâches dans Canada.ca.</p>
 <section>
   <div class="row">
     <section class="wb-eqht gc-drmt">
       <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/architecture/organizing-content.htmll">Organizing content</a></h3>
-        <p>Themes and institutional navigation, URLs, sub-domains, content types and content states</p>
+        <h3 class="h5"><a href="https://conception.canada.ca/architecture/organiser-contenu.html">Organiser le contenu</a></h3>
+        <p>Navigation institutionnelle et thématique, adresses URL, sous-domaines, types de contenu et état du contenu </p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="#">Metadata guidance</a></h3>
-        <p>Write effective metadata descriptions, add keywords, prioritize search optimization efforts</p>
+        <h3 class="h5"><a href="#">Lignes directrices sur les métadonnées</a></h3>
+        <p>Rédiger des descriptions de métadonnées efficaces, ajouter des mots-clés, prioriser les travaux d’optimisation de la recherche</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/guidance/structured-data.html">Adding structured data on Canada.ca pages</a></h3>
-        <p>How to add structured data, measure the impact, schema code and examples</p>
+        <h3 class="h5"><a href="https://conception.canada.ca/directives/donnees-structurees.html">Ajouter des données structurées aux pages de Canada.ca</a></h3>
+        <p>Comment ajouter des données structurées, mesurer les retombées, code et exemples de schémas</p>
       </div>
     </section>
   </div>
 </section>
+
 <section class="pagedetails">
-	<h2 class="wb-inv">Page details</h2><dl id="wb-dtmd">
-	<dt>Date modified:</dt>
-	<dd><time property="dateModified">2024-07-15</time></dd>
+	<h2 class="wb-inv">Détails de la page</h2><dl id="wb-dtmd">
+	<dt>Date de modification&#160;:</dt>
+	<dd><time property="dateModified">2024-07-17</time></dd>
 </dl>
 </section>
 
 </main>
 
-		<footer id="wb-info">
-	<h2 class="wb-inv">About this site</h2>
+<footer id="wb-info">
+	<h2 class="wb-inv">À propos de ce site</h2>
 <div class="gc-contextual">
 		<div class="container">
 			<nav>
-				<h3>Digital Transformation Office (DTO)</h3>
-				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3"><li><a href="mailto:cds.dto-btn.snc@servicecanada.gc.ca">Contact us</a></li></ul>
+				<h3>Bureau de la transformation numérique (BTN)</h3>
+				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3"><li><a href="mailto:cds.dto-btn.snc@servicecanada.gc.ca">Contactez-nous</a></li></ul>
 			</nav>
 		</div>
 	</div>
@@ -200,29 +203,29 @@
 	<div class="gc-main-footer">
 		<div class="container">
 			<nav>
-				<h3>Government of Canada</h3>
-				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3"><li><a href="https://www.canada.ca/en/contact.html">All contacts</a></li>
-					<li><a href="https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
-					<li><a href="https://www.canada.ca/en/government/system.html">About government</a></li></ul>
-				<h4><span class="wb-inv">Themes and topics</span></h4>
-				<ul class="list-unstyled colcount-sm-2 colcount-md-3"><li><a href="https://www.canada.ca/en/services/jobs.html">Jobs</a></li>
-					<li><a href="https://www.canada.ca/en/services/immigration-citizenship.html">Immigration and citizenship</a></li>
-					<li><a href="https://travel.gc.ca/">Travel and tourism</a></li>
-					<li><a href="https://www.canada.ca/en/services/business.html">Business</a></li>
-					<li><a href="https://www.canada.ca/en/services/benefits.html">Benefits</a></li>
-					<li><a href="https://www.canada.ca/en/services/health.html">Health</a></li>
-					<li><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
-					<li><a href="https://www.canada.ca/en/services/environment.html">Environment and natural resources</a></li>
-					<li><a href="https://www.canada.ca/en/services/defence.html">National security and defence</a></li>
-					<li><a href="https://www.canada.ca/en/services/culture.html">Culture, history and sport</a></li>
-					<li><a href="https://www.canada.ca/en/services/policing.html">Policing, justice and emergencies</a></li>
-					<li><a href="https://www.canada.ca/en/services/transport.html">Transport and infrastructure</a></li>
-					<li><a href="https://www.international.gc.ca/world-monde/index.aspx?lang=eng">Canada and the world</a></li>
-					<li><a href="https://www.canada.ca/en/services/finance.html">Money and finance</a></li>
-					<li><a href="https://www.canada.ca/en/services/science.html">Science and innovation</a></li>
-					<li><a href="https://www.canada.ca/en/services/indigenous-peoples.html">Indigenous peoples</a></li>
-					<li><a href="https://www.canada.ca/en/services/veterans-military.html">Veterans and military</a></li>
-					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li></ul>
+				<h3>Gouvernement du Canada</h3>
+				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3"><li><a href="https://www.canada.ca/fr/contact.html">Toutes les coordonnées</a></li>
+					<li><a href="https://www.canada.ca/fr/gouvernement/min.html">Ministères et organismes</a></li>
+					<li><a href="https://www.canada.ca/fr/gouvernement/systeme.html">À propos du gouvernement</a></li></ul>
+				<h4><span class="wb-inv">Thèmes et sujets</span></h4>
+				<ul class="list-unstyled colcount-sm-2 colcount-md-3"><li><a href="https://www.canada.ca/fr/services/emplois.html">Emplois</a></li>
+					<li><a href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Immigration et citoyenneté</a></li>
+					<li><a href="https://voyage.gc.ca/">Voyage et tourisme</a></li>
+					<li><a href="https://www.canada.ca/fr/services/entreprises.html">Entreprises</a></li>
+					<li><a href="https://www.canada.ca/fr/services/prestations.html">Prestations</a></li>
+					<li><a href="https://www.canada.ca/fr/services/sante.html">Santé</a></li>
+					<li><a href="https://www.canada.ca/fr/services/impots.html">Impôts</a></li>
+					<li><a href="https://www.canada.ca/fr/services/environnement.html">Environnement et ressources naturelles</a></li>
+					<li><a href="https://www.canada.ca/fr/services/defense.html">Sécurité nationale et défense</a></li>
+					<li><a href="https://www.canada.ca/fr/services/culture.html">Culture, histoire et sport</a></li>
+					<li><a href="https://www.canada.ca/fr/services/police.html">Services de police, justice et urgences</a></li>
+					<li><a href="https://www.canada.ca/fr/services/transport.html">Transport et infrastructure</a></li>
+					<li><a href="https://www.international.gc.ca/world-monde/index.aspx?lang=fra">Le Canada et le monde</a></li>
+					<li><a href="https://www.canada.ca/fr/services/finance.html">Argent et finance</a></li>
+					<li><a href="https://www.canada.ca/fr/services/science.html">Science et innovation</a></li>
+					<li><a href="https://www.canada.ca/fr/services/autochtones.html">Autochtones</a></li>
+					<li><a href="https://www.canada.ca/fr/services/veterans-militaire.html">Vétérans et militaires</a></li>
+					<li><a href="https://www.canada.ca/fr/services/jeunesse.html">Jeunesse</a></li></ul>
 			</nav>
 		</div>
 	</div>
@@ -230,15 +233,15 @@
 	<div class="gc-sub-footer">
 		<div class="container d-flex align-items-center">
 			<nav>
-				<h3 class="wb-inv">Government of Canada Corporate</h3>
+				<h3 class="wb-inv">Organisation du gouvernement du Canada</h3>
 				<ul>
-					<li><a href="https://www.canada.ca/en/social.html">Social media</a></li>
-					<li><a href="https://www.canada.ca/en/mobile.html">Mobile applications</a></li>
-					<li><a href="https://www.canada.ca/en/government/about.html">About Canada.ca</a></li><li><a href="https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a></li>
-					<li><a href="https://www.canada.ca/en/transparency/privacy.html">Privacy</a></li></ul>
+					<li><a href="https://www.canada.ca/fr/sociaux.html">Médias sociaux</a></li>
+					<li><a href="https://www.canada.ca/fr/mobile.html">Applications mobiles</a></li>
+					<li><a href="https://www.canada.ca/fr/gouvernement/a-propos.html">À propos de Canada.ca</a></li><li><a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
+					<li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li></ul>
 			</nav>
 			<div class="wtrmrk align-self-end">
-				<img src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/wmms-blk.svg" alt="Symbol of the Government of Canada" />
+				<img src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/wmms-blk.svg" alt="Symbole du gouvernement du Canada" />
 			</div>
 		</div>
 	</div>
