--- a/jmtesting/design-canada/information-findability-fr.html
+++ b/jmtesting/design-canada/information-findability-fr.html
@@ -133,15 +133,15 @@
 				<meta property="position" content="1">
 			</li>
 			<li property="itemListElement" typeof="ListItem">
-				<a property="item" typeof="WebPage" href="./index.html">
-					<span property="name">Designing for Canada.ca</span>
+				<a property="item" typeof="WebPage" href="./index-fr.html">
+					<span property="name">Concevoir pour Canada.ca</span>
 				</a>
 				<meta property="position" content="2">
 			</li>
 			
 						<li property="itemListElement" typeof="ListItem">
-							<a property="item" typeof="WebPage" href="./specifications.html">
-								<span property="name">Canada.ca specifications</span>
+							<a property="item" typeof="WebPage" href="./specifications-fr.html">
+								<span property="name">Spécifications de Canada.ca</span>
 							</a>
 							<meta property="position" content="2">
 						</li>
