--- a/jmtesting/design-canada/index.html
+++ b/jmtesting/design-canada/index.html
@@ -179,7 +179,7 @@
     </section>
   </div>
 </section>
-<!-- <section>
+<section>
   <h2>Find guidance</h2>
   <div class="row mrgn-tp-md">
     <div class="col-md-3 small">
@@ -271,7 +271,7 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 <section class="pagedetails">
 	<h2 class="wb-inv">Page details</h2><dl id="wb-dtmd">
