--- a/jmtesting/design-canada/index.html
+++ b/jmtesting/design-canada/index.html
@@ -239,7 +239,7 @@
 		  <div class="mrgn-tp-md mrgn-bttm-md">
 			<table class="wb-tables table table-striped small mrgn-tp-lg brdr-tp" aria-live="polite" id="design" data-page-length="25" data-wb-tables="{
 			  &quot;bDeferRender&quot;: true,
-			  &quot;ajaxSource&quot;: &quot;./ajax/patterns-01-en.json&quot;,
+			  &quot;ajaxSource&quot;: &quot;https://design.canada.ca/ajax/patterns-01-en.json&quot;,
 			  &quot;order&quot;: [0, &quot;asc&quot;],
 			  &quot;paging&quot;: true,
 			  &quot;info&quot;: true,
@@ -341,7 +341,7 @@
 </footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha384-rY/jv8mMhqDabXSo+UCggqKtdmBfd3qC2/KvyTDNQ6PcUJXaxK1tMepoQda4g5vB" crossorigin="anonymous"></script>
 <script src="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/js/wet-boew.min.js"></script>
-<script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/js/theme.min.js"></script><script src="/js/gc-pg-hlpfl.js"></script><!-- Custom code starts here -->
+<script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/js/theme.min.js"></script><script src="https://design.canada.ca/js/gc-pg-hlpfl.js"></script><!-- Custom code starts here -->
 
 <!-- Custom code ends here -->
 
