--- a/jmtesting/design-canada/index.html
+++ b/jmtesting/design-canada/index.html
@@ -154,11 +154,7 @@
     <section class="wb-eqht gc-drmt">
       <div class="col-md-4">
         <h3 class="h5"><a href="./specifications.html">Canada.ca specifications</a></h3>
-        <p>Who has to use the Canada.ca design, mandatory elements, design principles, information architecture and findability, templates and patterns</p>
-      </div>
-      <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/style-guide/">Canada.ca Content Style guide</a></h3>
-        <p>Writing principles and techniques to make content clear and accessible to all</p>
+        <p>Who has to use the Canada.ca design, mandatory elements, Canada.ca Content Style Guide, design principles, information architecture and findability, templates and patterns</p>
       </div>
       <div class="col-md-4">
         <h3 class="h5"><a href="https://design.canada.ca/continuous-improvement.html">Continuous improvement of web content</a></h3>
