--- a/jmtesting/design-canada/specifications.html
+++ b/jmtesting/design-canada/specifications.html
@@ -164,6 +164,10 @@
         <h3 class="h5"><a href="https://design.canada.ca/architecture/mandatory-elements.html">Mandatory elements</a></h3>
         <p>Colours, typography, header and footer, mandatory templates</p>
       </div>
+	<div class="col-md-4">
+        <h3 class="h5"><a href="https://design.canada.ca/style-guide/">Canada.ca Content Style guide</a></h3>
+        <p>Writing principles and techniques to make content clear and accessible to all</p>
+      </div>    
       <div class="col-md-4">
         <h3 class="h5"><a href="https://design.canada.ca/architecture/templates.html">Design principles</a></h3>
         <p>Using evidence to design people-first and task-centred experiences.</p>
