--- a/jmtesting/design-canada/information-findability.html
+++ b/jmtesting/design-canada/information-findability.html
@@ -163,7 +163,7 @@
   <div class="row">
     <section class="wb-eqht gc-drmt">
       <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/architecture/organizing-content.htmll">Organizing content</a></h3>
+        <h3 class="h5"><a href="https://design.canada.ca/architecture/organizing-content.html">Organizing content</a></h3>
         <p>Themes and institutional navigation, URLs, sub-domains, content types and content states</p>
       </div>
       <div class="col-md-4">
