--- a/jmtesting/design-canada/index-fr.html
+++ b/jmtesting/design-canada/index-fr.html
@@ -154,11 +154,7 @@
     <section class="wb-eqht gc-drmt">
       <div class="col-md-4">
         <h3 class="h5"><a href="./specifications-fr.html">Spécifications de Canada.ca </a></h3>
-        <p>Qui doit utiliser la conception de Canada.ca, éléments obligatoires, principes de conception, architecture de l’information et trouvabilité, modèles et configurations</p>
-      </div>
-      <div class="col-md-4">
-        <h3 class="h5"><a href="https://conception.canada.ca/guide-redaction/">Guide de rédaction du contenu du site Canada.ca</a></h3>
-        <p>Principes et techniques de rédaction pour rendre le contenu clair et accessible</p>
+        <p>Qui doit utiliser la conception de Canada.ca, éléments obligatoires, Guide de rédaction du contenu du site Canada.ca, principes de conception, architecture de l’information et trouvabilité, modèles et configurations</p>
       </div>
       <div class="col-md-4">
         <h3 class="h5"><a href="https://conception.canada.ca/amelioration-continue.html">Amélioration continue du contenu Web</a></h3>
