--- a/jmtesting/design-canada/specifications-fr.html
+++ b/jmtesting/design-canada/specifications-fr.html
@@ -160,6 +160,10 @@
 		  <h3 class="h5"><a href="https://conception.canada.ca/architecture/elements-obligatoires.html">Éléments obligatoires</a></h3>
 		  <p>Couleurs, typographie, en-tête et pied de page, modèles obligatoires</p>
 		</div>
+		  <div class="col-md-4">
+        <h3 class="h5"><a href="https://conception.canada.ca/guide-redaction/">Guide de rédaction du contenu du site Canada.ca</a></h3>
+        <p>Principes et techniques de rédaction pour rendre le contenu clair et accessible</p>
+      </div>
 		<div class="col-md-4">
 		  <h3 class="h5"><a href="https://conception.canada.ca/architecture/modeles.html">Principes de conception</a></h3>
 		  <p>Concevoir des expériences axées sur les personnes et leurs tâches à l’aide de données probantes</p>
