--- a/jmtesting/design-canada/index.html
+++ b/jmtesting/design-canada/index.html
@@ -148,7 +148,7 @@
 
 		<main class="container" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
 <h1 property="name headline" id="wb-cont" dir="ltr">Designing for Canada.ca</h1>
-<p>Mandatory elements for Canada.ca, writing principles, how to organize your content to make it easy-to-find, optimizing web content, evidence for and research on design choices.</p>
+<p>Mandatory elements for Canada.ca, writing principles, how to organize your content to make it easy to find, optimizing web content, evidence for and research on design choices.</p>
 <section>
   <div class="row">
     <section class="wb-eqht gc-drmt">
