--- a/jmtesting/design-canada/index.html
+++ b/jmtesting/design-canada/index.html
@@ -165,7 +165,7 @@
         <p>Evidence and insights on improving information and services on Canada.ca</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="">Research summaries</a></h3>
+        <h3 class="h5"><a href="https://design.canada.ca/research-summaries/">Research summaries</a></h3>
         <p>Research done to make it easier for people to find and understand Government of Canada information and services</p>
       </div>
 	  <div class="col-md-4">
