--- a/jmtesting/design-canada/index-fr.html
+++ b/jmtesting/design-canada/index-fr.html
@@ -165,7 +165,7 @@
         <p>Données probantes et observations relatives à l’amélioration de l’information et des services dans Canada.ca</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="">Résumés de recherche</a></h3>
+        <h3 class="h5"><a href="https://conception.canada.ca/resumes-recherche/">Résumés de recherche</a></h3>
         <p>Research done to make it easier for people to find and understand Government of Canada information and services</p>
       </div>
 	  <div class="col-md-4">
