--- a/jmtesting/design-canada/specifications.html
+++ b/jmtesting/design-canada/specifications.html
@@ -173,7 +173,7 @@
         <p>Organizing content, metadata guidance, adding structured data</p>
       </div>
       <div class="col-md-4">
-        <h3 class="h5"><a href="https://design.canada.ca/architecture/templates.html">Design principles</a></h3>
+        <h3 class="h5"><a href="https://design.canada.ca/architecture/templates.html">Designing content for Canada.ca</a></h3>
         <p>Using evidence to design people-first and task-centred experiences.</p>
       </div>
 	  <div class="col-md-4">
