--- a/jmtesting/design-canada/specifications-fr.html
+++ b/jmtesting/design-canada/specifications-fr.html
@@ -169,7 +169,7 @@
 		  <p>Organiser le contenu, lignes directrices sur les métadonnées, ajouter des données structurées</p>
 		</div>
 		  <div class="col-md-4">
-		  <h3 class="h5"><a href="https://conception.canada.ca/architecture/modeles.html">Principes de conception</a></h3>
+		  <h3 class="h5"><a href="https://conception.canada.ca/architecture/modeles.html">Concevoir le contenu pour Canada.ca</a></h3>
 		  <p>Concevoir des expériences axées sur les personnes et leurs tâches à l’aide de données probantes</p>
 		</div>
 		<div class="col-md-4">
