--- a/jmtesting/50-top-2024/en.html
+++ b/jmtesting/50-top-2024/en.html
@@ -475,6 +475,7 @@
 <h3 class="mrgn-tp-lg">Previous data</h3>
 <details>
 	<summary>Top 50 tasks: 2022 - 2023</summary>
+	<p><strong>Data source:</strong> April 1, 2022 - March 31, 2023</p>
 	<table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }">
 		<thead>
 		<tr>
