--- a/jmtesting/50-top-2024/fr.html
+++ b/jmtesting/50-top-2024/fr.html
@@ -474,6 +474,11 @@
 <p><br /></p>
 <h3>Données précédentes</h3>
 <details>
+	<summary>Les 50 tâches principales&nbsp;: 2022&nbsp;-&nbsp;2023</summary>
+	<p><strong>Source des données</strong>&nbsp;: 1&nbsp;avril&nbsp;2022 - 31&nbsp;mars&nbsp;2023</p>
+
+</details>
+<details>
 <summary>Les 50 tâches principales&nbsp;: 2021&nbsp;-&nbsp;2022</summary>
 <p><strong>Source des données</strong>&nbsp;: 1&nbsp;avril&nbsp;2021 - 31&nbsp;mars&nbsp;2022</p>
 <table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }">
