--- a/jmtesting/50-top-2024/fr.html
+++ b/jmtesting/50-top-2024/fr.html
@@ -476,7 +476,318 @@
 <details>
 	<summary>Les 50 tâches principales&nbsp;: 2022&nbsp;-&nbsp;2023</summary>
 	<p><strong>Source des données</strong>&nbsp;: 1&nbsp;avril&nbsp;2022 - 31&nbsp;mars&nbsp;2023</p>
-
+	<table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }">
+		<thead>
+		<tr>
+		  <th scope="col">Rang</th>
+		  <th scope="col">Tâche</th>
+		  <th scope="col">Institution</th>
+		  <th scope="col">Réponses au sondage sur la réussite des tâches </th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+		  <td>1</td>
+		  <td>Vérifiez l'état de sa demande</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>42347</td>
+		</tr>
+		<tr>
+		  <td>2</td>
+		  <td>Présenter une demande de permis de travail</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>29094</td>
+		</tr>
+		<tr>
+		  <td>3</td>
+		  <td>Présenter une demande de visa de visiteur au Canada</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>14206</td>
+		</tr>
+		<tr>
+		  <td>4</td>
+		  <td>Consulter mon courrier en ligne</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>13703</td>
+		</tr>
+		<tr>
+		  <td>5</td>
+		  <td>Accéder à Mon dossier</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>12973</td>
+		</tr>
+		<tr>
+		  <td>6</td>
+		  <td>Présentez une demande de citoyenneté canadienne</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>11953</td>
+		</tr>
+		<tr>
+		  <td>7</td>
+		  <td>Étudier au Canada – pour les non-Canadiens</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>11548</td>
+		</tr>
+		<tr>
+		  <td>8</td>
+		  <td>Immigrez dans le cadre d'Entrée express</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>11392</td>
+		</tr>
+		<tr>
+		  <td>9</td>
+		  <td>Emploi dans le secteur privé</td>
+		  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+		  <td>10323</td>
+		</tr>
+		<tr>
+		  <td>10</td>
+		  <td>Emploi à la fonction publique fédérale</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>8483</td>
+		</tr>
+		<tr>
+		  <td>11</td>
+		  <td>Consulter mes feuillets de renseignements T4</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>8423</td>
+		</tr>
+		<tr>
+		  <td>12</td>
+		  <td>Communiquez avec Immigration, Réfugiés et Citoyenneté Canada</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>8076</td>
+		</tr>
+		<tr>
+		  <td>13</td>
+		  <td>Vérifiez les délais de traitement</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>7009</td>
+		</tr>
+		<tr>
+		  <td>14</td>
+		  <td>Obtenir une copie de mon avis de cotisation ou de nouvelle cotisation</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>6983</td>
+		</tr>
+		<tr>
+		  <td>15</td>
+		  <td>Assurance-emploi – Soumettre une déclaration d'assurance-emploi</td>
+		  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+		  <td>6232</td>
+		</tr>
+		<tr>
+		  <td>16</td>
+		  <td>Mon dossier Service Canada – Visualiser l'état de votre demande d'assurance-emploi et votre correspondance</td>
+		  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+		  <td>5586</td>
+		</tr>
+		<tr>
+		  <td>17</td>
+		  <td>Mon dossier Service Canada – Ouvrir une session</td>
+		  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+		  <td>5584</td>
+		</tr>
+		<tr>
+		  <td>18</td>
+		  <td>Découvrez si vous avez besoin d'un visa ou d'une autorisation de voyage électronique (AVE) pour entrer au Canada</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>5357</td>
+		</tr>
+		<tr>
+		  <td>19</td>
+		  <td>ArriveCAN - Soumettre votre déclaration de douane et d'immigration avant d'atterrir au Canada</td>
+		  <td><a href="https://www.cbsa-asfc.gc.ca/menu-fra.html">Agence des services frontaliers du Canada</a></td>
+		  <td>5272</td>
+		</tr>
+		<tr>
+		  <td>20</td>
+		  <td>Renouveler un passeport canadien</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>5042</td>
+		</tr>
+		<tr>
+		  <td>21</td>
+		  <td>Assurance-emploi – Présenter une demande de prestations de l'assurance-emploi</td>
+		  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+		  <td>4964</td>
+		</tr>
+		<tr>
+		  <td>22</td>
+		  <td>Immigrez en tant que candidat d'une province</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>4367</td>
+		</tr>
+		<tr>
+		  <td>23</td>
+		  <td>Exigences COVID-19 pour les voyageurs</td>
+		  <td><a href="https://www.canada.ca/fr/sante-publique.html">Agence de la santé publique du Canada</a></td>
+		  <td>4041</td>
+		</tr>
+		<tr>
+		  <td>24</td>
+		  <td>Demander un nouveau passeport canadien</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>3943</td>
+		</tr>
+		<tr>
+		  <td>25</td>
+		  <td>Savoir quand je peux m'attendre à recevoir mon remboursement d'impôt</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>3876</td>
+		</tr>
+		<tr>
+		  <td>26</td>
+		  <td>Produire une déclaration de TPS/TVH</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>3248</td>
+		</tr>
+		<tr>
+		  <td>27</td>
+		  <td>Compte sécurisé d'IRCC - enregistrer, connecter, aide</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>2920</td>
+		</tr>
+		<tr>
+		  <td>28</td>
+		  <td>Parrainez les membres de votre famille aux fins d'immigration au Canada</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>2878</td>
+		</tr>
+		<tr>
+		  <td>29</td>
+		  <td>Faire un paiement à l'Agence du revenu du canada</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>2851</td>
+		</tr>
+		<tr>
+		  <td>30</td>
+		  <td>Ouvrir un compte pour le service Mon dossier</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>2695</td>
+		</tr>
+		<tr>
+		  <td>31</td>
+		  <td>Obtenez, renouvelez ou remplacez une carte de résident permanent</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>2654</td>
+		</tr>
+		<tr>
+		  <td>32</td>
+		  <td>Vaccins et traitements</td>
+		  <td><a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></td>
+		  <td>2631</td>
+		</tr>
+		<tr>
+		  <td>33</td>
+		  <td>Trouvez une trousse de demande ou un formulaire d'IRCC</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>2586</td>
+		</tr>
+		<tr>
+		  <td>34</td>
+		  <td>Se renseigner sur le plafond de cotisation annuel à un compte d'épargne libre d'impôt (CÉLI)</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>2464</td>
+		</tr>
+		<tr>
+		  <td>35</td>
+		  <td>Bourses pour étudier au Canada</td>
+		  <td><a href="https://www.international.gc.ca/global-affairs-affaires-mondiales/home-accueil.aspx?lang=fra">Affaires mondiales Canada</a></td>
+		  <td>2373</td>
+		</tr>
+		<tr>
+		  <td>36</td>
+		  <td>Connaître les crédits d'impôt, les déductions ou les dépenses que je peux demander</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>2339</td>
+		</tr>
+		<tr>
+		  <td>37</td>
+		  <td>Mon dossier Service Canada – Voir les renseignements sur vos paiements</td>
+		  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+		  <td>2295</td>
+		</tr>
+		<tr>
+		  <td>38</td>
+		  <td>Conseils aux voyageurs et avertissements</td>
+		  <td><a href="https://www.international.gc.ca/global-affairs-affaires-mondiales/home-accueil.aspx?lang=fra">Affaires mondiales Canada</a></td>
+		  <td>1978</td>
+		</tr>
+		<tr>
+		  <td>39</td>
+		  <td>Trouvez un centre de réception des demandes de visa</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>1941</td>
+		</tr>
+		<tr>
+		  <td>40</td>
+		  <td>Nombre de cas de COVID-19, statistiques</td>
+		  <td><a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></td>
+		  <td>1765</td>
+		</tr>
+		<tr>
+		  <td>41</td>
+		  <td>Vérifier si vous pouvez entrer au Canada</td>
+		  <td><a href="https://www.cbsa-asfc.gc.ca/menu-fra.html">Agence des services frontaliers du Canada</a></td>
+		  <td>1733</td>
+		</tr>
+		<tr>
+		  <td>42</td>
+		  <td>Se renseigner sur son plafond de cotisation à un régime enregistré d'épargne-retraite (REER)</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>1581</td>
+		</tr>
+		<tr>
+		  <td>43</td>
+		  <td>Mon dossier Service Canada – Créer un compte</td>
+		  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+		  <td>1538</td>
+		</tr>
+		<tr>
+		  <td>44</td>
+		  <td>Travailler et voyager à l'étranger avec Expérience internationale Canada (EIC) en tant que Canadien</td>
+		  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
+		  <td>1518</td>
+		</tr>
+		<tr>
+		  <td>45</td>
+		  <td>Assurance-emploi – Vérifier votre admissibilité</td>
+		  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+		  <td>1504</td>
+		</tr>
+		<tr>
+		  <td>46</td>
+		  <td>Rechercher les recensements</td>
+		  <td><a href="https://www.canada.ca/fr/https://bibliotheque-archives.canada.ca/fra/Pages/accueil.aspx">Bibliothèque et Archives Canada</a></td>
+		  <td>1490</td>
+		</tr>
+		<tr>
+		  <td>47</td>
+		  <td>Connaître le montant de mon versement de prestation</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>1476</td>
+		</tr>
+		<tr>
+		  <td>48</td>
+		  <td>Symptômes de la COVID-19</td>
+		  <td><a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></td>
+		  <td>1473</td>
+		</tr>
+		<tr>
+		  <td>49</td>
+		  <td>Obtenir un formulaire ou un guide d'impôt</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>1471</td>
+		</tr>
+		<tr>
+		  <td>50</td>
+		  <td>Calculer des retenues sur la paie</td>
+		  <td><a href="https://www.canada.ca/fr/agence-revenu.html">Agence du revenu du Canada</a></td>
+		  <td>1464</td>
+		</tr>
+		</tbody>
+		</table>
 </details>
 <details>
 <summary>Les 50 tâches principales&nbsp;: 2021&nbsp;-&nbsp;2022</summary>
