--- a/jmtesting/50-top-2024/en.html
+++ b/jmtesting/50-top-2024/en.html
@@ -448,13 +448,13 @@
 	<tr>
 		<td>47</td>
 		<td>How to extend your stay in Canada</td>
-		<td><a href="https://www.canada.ca/en/employment-social-development.html">Employment and Social Development Canada</a></td>
+		<td><a href="https://www.canada.ca/en/immigration-refugees-citizenship.html">Immigration, Refugees and Citizenship Canada</a></td>
 		<td>1526</td>
 	</tr>
 	<tr>
 		<td>48</td>
 		<td>Check the status of a passport application</td>
-		<td><a href="https://www.canada.ca/en/employment-social-development.html">Employment and Social Development Canada</a></td>
+		<td><a href="https://www.canada.ca/en/immigration-refugees-citizenship.html">Immigration, Refugees and Citizenship Canada</a></td>
 		<td>1435</td>
 	</tr>
 	<tr>
