--- a/jmtesting/50-top-2024/fr.html
+++ b/jmtesting/50-top-2024/fr.html
@@ -448,13 +448,13 @@
 <tr>
   <td>47</td>
   <td>Prolonger votre séjour au Canada</td>
-  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
   <td>1526</td>
 </tr>
 <tr>
   <td>48</td>
   <td>Vérifiez l'état de sa demande de passeport</td>
-  <td><a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a></td>
+  <td><a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a></td>
   <td>1435</td>
 </tr>
 <tr>
