--- a/sign-in-colours/index-colour-1.html
+++ b/sign-in-colours/index-colour-1.html
@@ -53,7 +53,14 @@
 	<link property="logo" href="https://servicecanada.github.io/wet-boew-demos/theme-menu/dist/GCWeb/assets/wmms-blk.svg" />
 </div>
 
-			
+<style>
+	.home #wb-so a {
+		border: 2px solid #EDBE5A;
+		border-top: none !important;
+	}
+
+	/* orange for fall */
+</style>	
 				
 <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4">
 	<h2>Search</h2>
@@ -84,13 +91,11 @@
 	
 	<a class="btn btn-primary" href="https://www.canada.ca/en/government/sign-in-online-account.html">Sign in
 	</a></section>
-</div>
-	
-	
+</div>	
 </header>
 
 		<main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
-			<div class="bg-cover" data-bgimg-srcset="https://www.canada.ca/content/dam/canada/homepage-bg/bkg-home-banner-spring-1920.jpg 1920w, https://www.canada.ca/content/dam/canada/homepage-bg/bkg-home-banner-spring-1200.jpg 1200w, https://www.canada.ca/content/dam/canada/homepage-bg/bkg-home-banner-spring-992.jpg 992w, https://wet-boew.github.io/vocab/wb/utilities#no-image 767w">
+			<div class="bg-cover" data-bgimg-srcset="https://www.canada.ca/content/dam/canada/homepage-bg/bkg-home-banner-fall-2024-xl-1920x315.jpg 1920w, https://www.canada.ca/content/dam/canada/homepage-bg/bkg-home-banner-spring-1200.jpg 1200w, https://www.canada.ca/content/dam/canada/homepage-bg/bkg-home-banner-spring-992.jpg 992w, https://wet-boew.github.io/vocab/wb/utilities#no-image 767w">
 	<div class="container p-0 p-sm-3">
 		<div class="well header-rwd brdr-0 brdr-rds-0 text-white bg-gctheme opct-90">
 			<h1 property="name" id="wb-cont">Canada.ca</h1>
