--- a/sign-in-colours/index-2.html
+++ b/sign-in-colours/index-2.html
@@ -20,9 +20,13 @@
 	.home #wb-so a {
 		border: none !important;
     	box-shadow: 0px 0px 25px 15px rgba(255, 255, 255, 0.85); /* Standard */
+		z-index: 0;
 	}
 
-	/* orange for fall */
+	#wb-srch .submit, .srchbox .submit {
+		z-index: 100;
+	}
+	/* box shadow, need to adjust z-index so search items are on top of it */
 </style>	
 
 
