--- a/feedback/pii-scrubbing/pii-modal-recommendations.html
+++ b/feedback/pii-scrubbing/pii-modal-recommendations.html
@@ -28,27 +28,29 @@
 </head>
 
 <body vocab="http://schema.org/" typeof="WebPage" resource="#wb-webpage" class="wb-modal"><div class="mfp-bg mfp-ready"></div><div class="mfp-wrap mfp-auto-cursor mfp-ready" tabindex="-1" style="overflow: hidden auto;"><dialog class="mfp-container" open="open"><div class="mfp-container mfp-s-ready mfp-inline-holder"><div class="mfp-content" aria-labelledby="lbx-title" role="document" data-pgtitle="Page feedback tool with PII data scrub"><section id="wb-data-scrub-modal" class="modal-dialog modal-content overlay-def"><header class="modal-header">
-				<h2 class="modal-title" id="lbx-title">Remove Personal information</h2>
+				<h2 class="modal-title" id="lbx-title">Personal information was included in your comment</h2>
 			</header>
 			<div class="modal-body">
-				<p>Some information added in the following fields is identified as personal information and it will be replaced as follows:</p>
-				<dl class="dl-horizontal"><dt>Please provide more details</dt><dd><code>******** test</code></dd></dl>
+				<p>Your personal information has been removed.</p>
+				<p><b>Your comment will be submitted as:</b></p>
+				<p><code>******** test</code></p>
 				<details class="mrgn-tp-md">
-					<summary>Find out more</summary>
-					<p>Please note that any information that corresponds to the cases from the list below, is considered as personal information and is removed from the form prior its submission:</p>
+					<summary>What is considered personal information?</summary>
+					<p>These types of information can’t be included in this feedback form:</p>
 					<ul>
-						<li>Any 8 or more digits separated or not by the following characters: ' ', '/', '-', '.'</li>
-						<li>Passport serial number</li>
-						<li>Email</li>
+						<li>Email address</li>
+						<li>Telephone number</li>
 						<li>Postal code</li>
-						<li>Certain parametres considered non secured in a url</li>
+						<li>Passport number</li>
+						<li>Business number</li>
+						<li>Social insurance number</li>
 					</ul>
 				</details>
 			</div>
 			<div class="modal-footer">
 				<div class="row">
-					<div class="col-xs-12 col-sm-5 mrgn-tp-sm"><button class="btn btn-primary btn-block popup-modal-dismiss">Go back to the form</button></div>
-					<div class="col-xs-12 col-sm-7 mrgn-tp-sm"><button class="btn btn-link btn-block popup-modal-dismiss" data-wbscrub-form="wb-auto-3">I agree, remove personal information</button></div>
+					<div class="col-xs-12 col-sm-5 mrgn-tp-sm"><button class="btn btn-link btn-block popup-modal-dismiss">Go back and edit comment</button></div>
+					<div class="col-xs-12 col-sm-7 mrgn-tp-sm"><button class="btn btn-primary btn-block popup-modal-dismiss" data-wbscrub-form="wb-auto-3">Submit comment</button></div>
 				</div>
 			</div></section></div><div class="mfp-preloader">loading...</div></div></dialog></div>
 	<div class="global-header">
