--- a/feedback/pii-scrubbing/pii-modal-recommendations.html
+++ b/feedback/pii-scrubbing/pii-modal-recommendations.html
@@ -31,7 +31,7 @@
 				<h2 class="modal-title" id="lbx-title">Personal information was included in your comment</h2>
 			</header>
 			<div class="modal-body">
-				<p>Your personal information has been removed to protect your privacy.</p>
+				<p>Your personal information will be removed to protect your privacy.</p>
 				<p><b>Your comment will be submitted as:</b></p>
 				<p><code>******** test</code></p>
 				<details class="mrgn-tp-md">
