--- a/feedback/pii-scrubbing/pii-modal-recommendations.html
+++ b/feedback/pii-scrubbing/pii-modal-recommendations.html
@@ -32,6 +32,7 @@
 			</header>
 			<div class="modal-body">
 				<p>Your personal information will be removed to protect your privacy.</p>
+				<p>Feedback is only used to improve our website. For a response, contact us using the links at the bottom of any webpage.</p>
 				<p><b>Your comment will be submitted as:</b></p>
 				<p><code>******** test</code></p>
 				<details class="mrgn-tp-md">
