--- a/feedback/pii-scrubbing/pii-modal-recommendations.html
+++ b/feedback/pii-scrubbing/pii-modal-recommendations.html
@@ -37,7 +37,7 @@
 				<p><code>******** test</code></p>
 				<details class="mrgn-tp-md">
 					<summary>What is considered personal information?</summary>
-					<p>These types of information can’t be included in this feedback form:</p>
+					<p>Certain types of information can’t be included in this feedback form, such as your:</p>
 					<ul>
 						<li>Email address</li>
 						<li>Telephone number</li>
