--- a/feedback/pii-scrubbing/pii-modal-recommendations.html
+++ b/feedback/pii-scrubbing/pii-modal-recommendations.html
@@ -44,7 +44,7 @@
 						<li>Postal code</li>
 						<li>Passport number</li>
 						<li>Business number</li>
-						<li>Social insurance number</li>
+						<li>Social insurance number (SIN)</li>
 					</ul>
 				</details>
 			</div>
