--- a/feedback/pii-scrubbing/pii-modal-recommendations.html
+++ b/feedback/pii-scrubbing/pii-modal-recommendations.html
@@ -28,23 +28,22 @@
 </head>
 
 <body vocab="http://schema.org/" typeof="WebPage" resource="#wb-webpage" class="wb-modal"><div class="mfp-bg mfp-ready"></div><div class="mfp-wrap mfp-auto-cursor mfp-ready" tabindex="-1" style="overflow: hidden auto;"><dialog class="mfp-container" open="open"><div class="mfp-container mfp-s-ready mfp-inline-holder"><div class="mfp-content" aria-labelledby="lbx-title" role="document" data-pgtitle="Page feedback tool with PII data scrub"><section id="wb-data-scrub-modal" class="modal-dialog modal-content overlay-def"><header class="modal-header">
-				<h2 class="modal-title" id="lbx-title">Personal information was included in your comment</h2>
+				<h2 class="modal-title" id="lbx-title">You’ve included personal information in your comment</h2>
 			</header>
 			<div class="modal-body">
-				<p>Your personal information will be removed to protect your privacy.</p>
-				<p>Feedback is only used to improve our website. For a response, contact us using the links at the bottom of any webpage.</p>
-				<p><b>Your comment will be submitted as:</b></p>
+				<p>Comments are only used to improve our website. For a response, contact us using the links at the bottom of any webpage.</p>
+				<p><b>To protect your privacy, your comment will be submitted as:</b></p>
 				<p><code>******** test</code></p>
 				<details class="mrgn-tp-md">
 					<summary>What is considered personal information?</summary>
 					<p>Certain types of information can’t be included in this feedback form, such as your:</p>
 					<ul>
-						<li>Email address</li>
-						<li>Telephone number</li>
-						<li>Postal code</li>
-						<li>Passport number</li>
-						<li>Business number</li>
-						<li>Social insurance number (SIN)</li>
+						<li>email address</li>
+						<li>telephone number</li>
+						<li>postal code</li>
+						<li>passport number</li>
+						<li>business number</li>
+						<li>social insurance number (SIN)</li>
 					</ul>
 				</details>
 			</div>
