--- a/feedback/pii-scrubbing/pii-modal-recommendations.html
+++ b/feedback/pii-scrubbing/pii-modal-recommendations.html
@@ -28,7 +28,7 @@
 </head>
 
 <body vocab="http://schema.org/" typeof="WebPage" resource="#wb-webpage" class="wb-modal"><div class="mfp-bg mfp-ready"></div><div class="mfp-wrap mfp-auto-cursor mfp-ready" tabindex="-1" style="overflow: hidden auto;"><dialog class="mfp-container" open="open"><div class="mfp-container mfp-s-ready mfp-inline-holder"><div class="mfp-content" aria-labelledby="lbx-title" role="document" data-pgtitle="Page feedback tool with PII data scrub"><section id="wb-data-scrub-modal" class="modal-dialog modal-content overlay-def"><header class="modal-header">
-				<h2 class="modal-title" id="lbx-title">You’ve included personal information in your comment</h2>
+				<h2 class="modal-title" id="lbx-title">You included personal information in your comment</h2>
 			</header>
 			<div class="modal-body">
 				<p>Comments are only used to improve our website. For a response, contact us using the links at the bottom of any webpage.</p>
