--- a/feedback/pii-scrubbing/pii-modal-recommendations.html
+++ b/feedback/pii-scrubbing/pii-modal-recommendations.html
@@ -49,7 +49,7 @@
 			</div>
 			<div class="modal-footer">
 				<div class="row">
-					<div class="col-xs-12 col-sm-5 mrgn-tp-sm"><button class="btn btn-link btn-block popup-modal-dismiss">Edit comment</button></div>
+					<div class="col-xs-12 col-sm-5 mrgn-tp-sm"><button class="btn btn-link btn-block popup-modal-dismiss">Go back and edit comment</button></div>
 					<div class="col-xs-12 col-sm-7 mrgn-tp-sm"><button class="btn btn-primary btn-block popup-modal-dismiss" data-wbscrub-form="wb-auto-3">Submit comment</button></div>
 				</div>
 			</div></section></div><div class="mfp-preloader">loading...</div></div></dialog></div>
