--- a/feedback/pii-scrubbing/pii-modal-recommendations.html
+++ b/feedback/pii-scrubbing/pii-modal-recommendations.html
@@ -31,7 +31,7 @@
 				<h2 class="modal-title" id="lbx-title">Personal information in your comment has been removed</h2>
 			</header>
 			<div class="modal-body">
-				<p>Comments are only used to improve our website. For an official response, use the contact link found at the bottom of any webpage.</p>
+				<p>Comments are only used to improve our website. You will not receive a response.</p>
 				<p><b>To protect your privacy, your comment will be submitted as:</b></p>
 				<p><code>******** test</code></p>
 				<details class="mrgn-tp-md">
